src/kobaia/nsam/NsamParser.java
/* Generated By:JavaCC: Do not edit this line. NsamParser.java */
package kobaia.nsam;

import java.net.*;
import java.io.*;
import java.util.*;

final class NsamParser implements NsamParserConstants {
        protected void setDocumentUrl(String url)
        {
                if (url == null)
                {
                        System.err.println("Document URL is not available. Set it to http://nsam.com/Default/anonymous.n3");
                        url = "http://nsam.com/Default/anonymous.n3";
                }
                this.docUrl = url;
        }

        protected String getDocumentUrl()
        {
                if (this.docUrl == null)
                {
                        System.err.println("Document URL is not available. Set it to http://nsam.com/Default/anonymous.n3");
                        this.docUrl = "http://nsam.com/Default/anonymous.n3";
                }
                return this.docUrl;
        }

        protected void setContentHandler(StatementHandler handler)
        {
                if (handler == null)
                {
                        System.err.println("StatementHandler reference is null! Nothing happens...");
                        return;
                }
                this.handler = handler;
        }

        protected String getURI(QName qname)
        {
                if ("_".equals(qname.pref)) return (qname.pref + ":" + qname.lname);
                if (prefixMap.get("") == null)
                {
                        String url = getDocumentUrl();
                        prefixMap.put("",
                                                 (url.endsWith("/") || url.endsWith("#"))? url : url + "#");
                }
                Object nsUri = prefixMap.get(qname.pref);
                if (nsUri == null && qname.pref != null && qname.pref.length() > 0)
                {
                        System.err.println("Unknown namespace prefix found: " + qname.pref + " : Cannot proceed.");
                        System.exit(-1);
                }
                if (nsUri == null) nsUri = "";
                //System.out.println("Full URI: " + nsUri + qname.lname);
                return (nsUri + qname.lname);
        }

        protected String getAnonymousId()
        {
                return (prefixMap.get("") + "anon" + count++);
        }

        protected String getBaseNamespace()
        {
                if (prefixMap.get("") == null)
                {
                        String url = getDocumentUrl();
                        prefixMap.put("",
                                                 (url.endsWith("/") || url.endsWith("#"))? url : url + "#");
                }
                return (String)prefixMap.get("");
        }


        protected String getURI(String uri)
        {
                return uri;
        }

        protected void pushSubject(String subject)
        {
                if (subject == null)
                {
                        System.err.println("Null Subject!!");
                        return;
                }
                this.subjects.addFirst(subject);
        }

        protected String currentSubject()
        {
                if (this.subjects.size() == 0) return null;
                return (String)this.subjects.getFirst();
        }

        protected String popSubject()
        {
                if (this.subjects.isEmpty()) return null;
                return (String)this.subjects.removeFirst();
        }

        protected void cleanSubjects()
        {
                this.subjects.clear();
        }

        protected void cleanPrefixMap()
        {
                this.prefixMap.clear();
        }

        private Map prefixMap = new HashMap();
        private StatementHandler handler = null;
        private LinkedList subjects = new LinkedList();
        private int count = 0;
        private String docUrl = null;

  final public void triples() throws ParseException {
        String s;
        String t = "";
        cleanPrefixMap();
        cleanSubjects();
    label_1:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
      if (jj_2_2(2)) {
        prefix();
        jj_consume_token(PERIOD);
      } else if (jj_2_3(2)) {
        triple();
        jj_consume_token(PERIOD);
                              popSubject();
      } else if (jj_2_4(2)) {
        formula();
        jj_consume_token(PERIOD);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void prefix() throws ParseException {
        String prefix, uri;
        Token t1=null, t2=null;
        String s;
    jj_consume_token(PREFIX);
    if (jj_2_5(2)) {
      t1 = jj_consume_token(QNamePref);
      s = uri();
                prefix = t1.toString();
                prefix = prefix.substring(0,prefix.length()-1);
                prefixMap.put(prefix,s);
                this.handler.prefix(prefix,s);
    } else if (jj_2_6(2)) {
      jj_consume_token(COLON);
      s = uri();
                prefixMap.put("",s);
                this.handler.prefix("",s);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void triple() throws ParseException {
        String s, o, p;
        List props;
    if (jj_2_10(2)) {
      s = node();
                                                         //System.out.println("Subject: " + s); 
                                                                  pushSubject(s);
      propertyAndObjectList();
    } else if (jj_2_11(2)) {
      if (jj_2_7(2)) {
        s = brace();
                                                 pushSubject(s);
      } else if (jj_2_8(2)) {
        s = bracket();
                                                 pushSubject(s);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      if (jj_2_9(2)) {
        propertyAndObjectList();
      } else {
        ;
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void formula() throws ParseException {
        QName qn;
        boolean yes = false;
    jj_consume_token(LBRACE);
                                                 this.handler.startFormula();
    tripleList();
    jj_consume_token(RBRACE);
                                                 popSubject();
    if (jj_2_12(2)) {
      qn = qName();
                                 this.handler.formulaConnector(getURI(qn));
    } else if (jj_2_13(2)) {
      jj_consume_token(46);
                                         this.handler.formulaConnector(LOG.IMPLIES);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(LBRACE);
    if (jj_2_14(2)) {
      tripleList();
                                 yes = true;
    } else {
      ;
    }
    jj_consume_token(RBRACE);
                                                 if (yes) popSubject();
                                                 this.handler.endFormula();
  }

  final public void tripleList() throws ParseException {
    triple();
    label_2:
    while (true) {
      if (jj_2_15(2)) {
        ;
      } else {
        break label_2;
      }
      jj_consume_token(PERIOD);
                                         popSubject();
      triple();
    }
  }

  final public void propertyAndObjectList() throws ParseException {
    propertyAndObject();
    label_3:
    while (true) {
      if (jj_2_16(2)) {
        ;
      } else {
        break label_3;
      }
      jj_consume_token(SEMICOLON);
      propertyAndObject();
    }
  }

  final public void propertyAndObject() throws ParseException {
        List l = new ArrayList();
        String p, o;
        String anonymous;
    p = verb();

    object(currentSubject(),p);
    label_4:
    while (true) {
      if (jj_2_17(2)) {
        ;
      } else {
        break label_4;
      }
      jj_consume_token(COMMA);
      object(currentSubject(),p);
    }
  }

  final public void object(String subj,String pred) throws ParseException {
        String o;
        Token t;
    if (jj_2_18(2)) {
      o = node();
                                                                  // System.out.println("Node Recoged.");
                                                                  String type = RDFS.RESOURCE;
                                                                  if (o.startsWith("?") || o.startsWith("_")) type = "VARIABLE";
                                                                  this.handler.statement(subj, pred, o, type);
    } else if (jj_2_19(2)) {
      t = jj_consume_token(STRING);
                                                          this.handler.statement(subj, pred, t.toString().substring(1,t.toString().length()-1), XSD.STRING);
    } else if (jj_2_20(2)) {
      t = jj_consume_token(TypedString);
                                                  // System.out.println("Typed String: " + t.toString());
                                                                  int index = t.toString().indexOf("^^");
                                                                  String dataString = t.toString().substring(1,index-1);
                                                                  String typeString = t.toString().substring(index+2);
                                                                  boolean notQName = typeString.indexOf("/") != -1 || typeString.indexOf("@") != -1;
                                                                  index = typeString.indexOf(":");
                                                                  QName qname = new QName(typeString.substring(0,index), typeString.substring(index+1));
                                                                  this.handler.statement(subj, pred, dataString, getURI(qname));
    } else if (jj_2_21(2)) {
      t = jj_consume_token(NUMBER);
                                                          this.handler.statement(subj, pred, t.toString(), XSD.INT);
    } else if (jj_2_22(2)) {
      t = jj_consume_token(REAL);
                                                          this.handler.statement(subj, pred, t.toString(), XSD.DOUBLE);
    } else if (jj_2_23(2)) {
      o = bracket();
                                                  this.handler.statement(subj, pred, o, RDFS.RESOURCE);
    } else if (jj_2_24(2)) {
      o = brace();
                                                          this.handler.statement(subj, pred, o, RDFS.RESOURCE);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public String node() throws ParseException {
        String s;
        QName qname;
        Token t;
        String anonymous;
    if (jj_2_25(2)) {
      qname = qName();
                                  {if (true) return getURI(qname);}
    } else if (jj_2_26(2)) {
      s = uri();
                                          {if (true) return s;}
    } else if (jj_2_27(2)) {
      t = jj_consume_token(ThisDoc);
                                  {if (true) return getDocumentUrl();}
    } else if (jj_2_28(2)) {
      t = jj_consume_token(Var);
                                          {if (true) return t.toString();}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public String verb() throws ParseException {
        String p;
        Token t;
    if (jj_2_35(2)) {
      if (jj_2_29(2)) {
        jj_consume_token(HAS);
      } else if (jj_2_30(2)) {
        jj_consume_token(GHAS);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      p = node();
    } else if (jj_2_36(2)) {
      if (jj_2_31(2)) {
        jj_consume_token(IS);
      } else if (jj_2_32(2)) {
        jj_consume_token(GIS);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      p = node();
      if (jj_2_33(2)) {
        jj_consume_token(OF);
      } else if (jj_2_34(2)) {
        jj_consume_token(GOF);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else if (jj_2_37(2)) {
      p = node();
    } else if (jj_2_38(2)) {
      t = jj_consume_token(Name);
                 if (t.toString().equals("a")) p=RDF.TYPE; else {if (true) throw new ParseException("Encountered " + t.toString());}
    } else if (jj_2_39(2)) {
      jj_consume_token(47);
                                 p=OWL.SAMEAS;
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
        {if (true) return p;}
    throw new Error("Missing return statement in function");
  }

  final public String bracket() throws ParseException {
        String anonymous;
    jj_consume_token(LBRACKET);
                                                                  pushSubject(getAnonymousId());
    label_5:
    while (true) {
      if (jj_2_40(2)) {
        ;
      } else {
        break label_5;
      }
      propertyAndObjectList();
    }
    jj_consume_token(RBRACKET);
                                                          {if (true) return popSubject();}
    throw new Error("Missing return statement in function");
  }

  final public String brace() throws ParseException {
        String anonymous;
        String list, rest;
        String n;
    if (jj_2_42(2)) {
      jj_consume_token(LPAREN);
                                                                  list = getAnonymousId();
                                                                  //System.out.println("Paren Opened with " + list); 

      object(list, RDF.FIRST);
                                                                          anonymous = list;
      label_6:
      while (true) {
        if (jj_2_41(2)) {
          ;
        } else {
          break label_6;
        }
                                              rest = getAnonymousId();
        object(rest, RDF.FIRST);
                                                                          this.handler.statement(list, RDF.REST, rest, RDFS.RESOURCE);
                                                                          list = rest;
      }
      jj_consume_token(RPAREN);
                                                                  this.handler.statement(list, RDF.REST, RDF.NIL, RDFS.RESOURCE);
                                                                          {if (true) return anonymous;}
    } else if (jj_2_43(2)) {
      jj_consume_token(LPAREN);
      jj_consume_token(RPAREN);
                                                                                {if (true) return RDF.NIL;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public QName qName() throws ParseException {
        Token p=null, n=null;
    if (jj_2_44(2)) {
      p = jj_consume_token(QName);
          //System.out.println("QName: " + (p==null?"":p.toString())); 
         int index = p.toString().indexOf(":");
         {if (true) return new QName(p.toString().substring(0,index),p.toString().substring(index+1));}
    } else if (jj_2_45(2)) {
      jj_consume_token(COLON);
        {if (true) return new QName("","");}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public String uri() throws ParseException {
        Token t;
    if (jj_2_46(2)) {
      t = jj_consume_token(URIRef);
                {if (true) return t.toString().substring(1,t.toString().length()-1);}
    } else if (jj_2_47(2)) {
      t = jj_consume_token(FragID);
                {if (true) return t.toString().substring(1,t.toString().length()-1);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_30(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_31(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_32(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_33(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_33(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_34(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_34(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_35(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_35(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_36(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_36(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_37(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_37(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_38(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_38(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_39(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_39(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_40(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_40(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_41(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_41(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_42(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_42(); }
    catch(LookaheadSuccess ls) { return true; }
  }
